--- a/style.css
+++ b/style.css
@@ -1,6 +1,196 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+
+*{
   margin : 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+}
+
+html{
+  font-size: 10px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+a{
+  text-decoration: none;
+}
+
+/* Landing Section */
+
+.container{
+ min-height: 100vh;
+ width: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+
+img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+#landing{
+  background-image: url(./images/profile.jpg);
+  background-size: cover;
+  background-position: top center;
+  position: relative;
+  z-index: 1;
+}
+
+#landing .landing{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 50px;
+  justify-content: flex-start;
+}
+
+#landing::after{
+  content:"";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  opacity: 0.1;
+  z-index: -1;
+}
+
+#landing h1{
+  display: block;
+  width: fit-content;
+  font-size: 4rem;
+  position: relative;
+  color: transparent;
+  animation: text_reveal 1s ease forwards;
+  animation-delay: 1.5s;
+}
+
+#landing h1 span{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  background-color: black;
+  animation: text_reveal_box 1s ease;
+  animation-delay: 1s;
+}
+
+#landing .cta{
+  display: inline-block;
+  padding: 10px 30px;
+  color: black;
+  background-color: transparent;
+  border: 2px solid black;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  margin-top: 30px;
+  transition: .3s ease background-color;
+  transition-property: background-color, color;
+}
+
+#landing .cta:hover{
+  color: white;
+  background-color: black;
+}
+
+/* Landing Section */
+/* Skill Section */
+
+#skills{}
+
+#skills .skills{
+  flex-direction: column;
+  text-align: center;
+  max-width: 1500px;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+#skills .section-title{
+  font-size: 4rem;
+  font-weight: 400;
+  color: black;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+#skills .skills-top p{
+ font-size: 1.4rem;
+ line-height: 2.5rem;
+ font-weight: 300;
+ text-align: center;
+ padding-bottom: 30px;
+ margin: 0 60px;
+}
+
+#skills .skills-cards{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  border-radius: 5px;
+}
+
+#skills .skills-card{
+  flex-basis: 80%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 30px;
+  border-radius: 10px;
+  background-image: url(./images/background1.jpg);
+  background-size: cover;
+  margin: 10px 5%;
+  font-size: 1.2rem;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+#skills .skills-card .icon i{
+  font-size: 1.5rem;
+}
+
+#skills .skills-card p{
+  text-align: left;
+}
+
+#skills .skills-card::after{
+  content: "";
+  position: absolute;
+  border-radius: 5px;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  opacity: .4;
+  z-index: -1;
+}
+
+
+
+/* KeyFrames */
+
+@keyframes text_reveal_box{
+  50%{
+    width: 100%;
+    left: 0;
+  }
+  100%{
+    width: 0;
+    left: 100%;
+  }
+}
+@keyframes text_reveal{
+  100%{
+    color: white;
+  }
 }
