--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ img{
   background-color: black;
 }
 
-/* Landing Section */
+/* End Landing Section */
 /* Skill Section */
 
 #skills{}
@@ -111,7 +111,7 @@ img{
   padding: 30px 0;
 }
 
-#skills .section-title{
+.section-title{
   font-size: 4rem;
   font-weight: 400;
   color: black;
@@ -175,6 +175,112 @@ img{
   z-index: -1;
 }
 
+/* End Skills Section */
+/* Project Section */
+
+#projects .projects{
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+
+#projects .projects-header h1{
+  margin-bottom: 50px;
+}
+
+#projects .all-projects{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#projects .project-item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 80%;
+  margin: 20px auto;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+  #projects .project-info{
+    padding: 30px;
+    flex-basis: 50%;
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    color: white;
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  #projects .project-info h1{
+    font-size: 4rem;
+    font-weight: 500;
+  }
+
+  #projects .project-info h2{
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin-top: 10px;
+  }
+
+  #projects .project-image{
+    flex-basis: 50%;
+    height: 100px;
+    overflow: hidden;
+    position: relative;
+  }
+
+  #projects .project-image:after{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    opacity: .7;
+  }
+
+  #projects .project-image img{
+    transition: .3s ease transform;
+  }
+
+  #projects .project-item:hover .project-image img{
+    transform: scale(1.1);
+  }
+
+/* End Projects Section */
+/* About Section */
+
+#about .about{
+  flex-direction: column-reverse;
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 20px;
+}
+
+#about .col-left{
+  width: 250px;
+  height: 360px;
+}
+
+#about .col-rigth{
+  width: 100%;
+}
+
+#about .col-rigth h2{
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
 
 
 /* KeyFrames */
