--- a/style.css
+++ b/style.css
@@ -381,6 +381,11 @@ p {
 	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 	color: white;
 }
+#projects .project-info hr{
+  margin-top: 20px;
+  color: white;
+  width: 100px;
+}
 #projects .project-info h1 {
 	font-size: 4rem;
 	font-weight: 500;
