--- a/style.css
+++ b/style.css
@@ -214,7 +214,6 @@ p {
 #header .hamburger.active .bar::after {
 	top: 0;
 }
-/* End Header section */
 
 /* Hero Section */
 #hero {
@@ -280,8 +279,6 @@ p {
 	animation-delay: 2.5s;
 }
 
-/* End Hero Section */
-
 /* Skills Section */
 #skills .skills {
 	flex-direction: column;
@@ -342,7 +339,6 @@ p {
 	color: white;
 	text-align: left;
 }
-/* End Skills Section */
 
 /* Projects section */
 #projects .projects {
@@ -441,7 +437,7 @@ p {
 #projects .project-item .live-link a:hover{
  color: #8E54E9;
 }
-/* End Projects section */
+
 
 /* About Section */
 #about .about {
@@ -497,9 +493,9 @@ p {
 	border: 2px solid #8E54E9;
 	z-index: -1;
 }
-/* End About Section */
 
-/* contact Section */
+
+/* Contact Section */
 #contact .contact {
 	flex-direction: column;
 	max-width: 1200px;
@@ -542,7 +538,6 @@ p {
 	line-height: 2rem;
 	font-weight: 500;
 }
-/*End contact Section */
 
 /* Footer */
 #footer {
@@ -583,7 +578,6 @@ p {
 	color: white;
 	font-size: 1.3rem;
 }
-/* End Footer */
 
 /* Keyframes */
 @keyframes hamburger_puls {
@@ -617,7 +611,6 @@ p {
 		font-weight: 500;
 	}
 }
-/* End Keyframes */
 
 /* Media Query For Tablet */
 @media only screen and (min-width: 768px) {
@@ -632,14 +625,12 @@ p {
 	#hero h1 {
 		font-size: 7rem;
 	}
-	/* End Hero */
 
 	/* Skills Section */
 	#skills .skill-bottom .skill-item {
 		flex-basis: 45%;
 		margin: 2.5%;
 	}
-	/* End Skills Section */
 
 	/* Project */
 	#projects .project-item {
@@ -660,7 +651,6 @@ p {
 	#projects .all-projects .project-img {
 		height: 100%;
 	}
-	/* End Project */
 
 	/* About */
 	#about .about {
@@ -685,9 +675,8 @@ p {
 	#about .col-right h1 {
 		text-align: left;
 	}
-	/* End About */
 
-	/* contact  */
+	/* Contact  */
 	#contact .contact {
 		flex-direction: column;
 		padding: 100px 0;
@@ -719,13 +708,11 @@ p {
 		text-align: left;
 		padding-left: 20px;
 	}
-	/* End contact  */
 }
-/* End Media Query For Tablet */
 
 /* Media Query For Desktop */
 @media only screen and (min-width: 1200px) {
-	/* header */
+	/* Header */
 	#header .hamburger {
 		display: none;
 	}
@@ -745,12 +732,14 @@ p {
 	#header .nav-list ul a:after {
 		display: none;
 	}
-	/* End header */
 
+	/* Skills section */
 	#skills .skill-bottom .skill-item {
 		flex-basis: 22%;
 		margin: 1.5%;
 	}
+
+	/* Nav */
   .brand h1{
     padding: 0 80px;
   }
