Global corrected version

--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ a {
 	align-items: center;
 	justify-content: center;
 }
+.container-mini {
+	min-height: 80vh;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 img {
 	height: 100%;
 	width: 100%;
@@ -79,11 +86,14 @@ p {
 	color: white;
 	background-color: #8E54E9;
 }
+.brand {
+	display: flex;
+}
 .brand h1 {
 	font-size: 4rem;
 	text-transform: uppercase;
 	color: white;
-  padding: 0 40px;
+  padding: 0px 40px;
 }
 .brand h1 span {
 	color: #8E54E9;
@@ -243,7 +253,7 @@ p {
 #hero h1 {
 	display: block;
 	width: fit-content;
-	font-size: 4rem;
+	font-size: 3rem;
 	position: relative;
 	color: transparent;
 	animation: text_reveal 0.5s ease forwards;
@@ -481,17 +491,18 @@ p {
 	height: 100%;
 	width: 100%;
 	position: relative;
-	
+	margin-top: 20px;
 }
 #about .col-left .about-img::after {
 	content: '';
 	position: absolute;
-	left: 5px;
-	top: 5px;
-	height: 98%;
-	width: 98%;
+	left: -2px;
+	top: -2px;
+	height: 100%;
+	width: 100%;
 	border: 2px solid #8E54E9;
 	z-index: -1;
+	margin-top: 0px;
 }
 
 
@@ -538,6 +549,23 @@ p {
 	line-height: 2rem;
 	font-weight: 500;
 }
+#contact .social-icon {
+	display: flex;
+	margin-bottom: 30px;
+}
+#contact .social-item {
+	height: 50px;
+	width: 50px;
+	margin: 0 5px;
+  margin-left: 25px;
+}
+#contact .social-item i {
+  color:  #8E54E9;
+  font-size: 3rem;
+}
+#contact .social-item:hover i {
+	color: lightgray;
+}
 
 /* Footer */
 #footer {
@@ -557,26 +585,23 @@ p {
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
-#footer .social-icon {
-	display: flex;
-	margin-bottom: 30px;
-}
-#footer .social-item {
-	height: 50px;
-	width: 50px;
-	margin: 0 5px;
-  margin-left: 25px;
-}
-#footer .social-item i {
-  color: white;
-  font-size: 3rem;
-}
-#footer .social-item:hover i {
-	color: #8E54E9;
-}
 #footer p {
 	color: white;
 	font-size: 1.3rem;
+}
+.branding {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.branding h1 {
+	font-size: 24px;
+	text-transform: uppercase;
+	color: white;
+  padding: 0px 20px;
+}
+.branding h1 span {
+	color: #8E54E9;
 }
 
 /* Keyframes */
@@ -623,12 +648,12 @@ p {
 	}
 	/* Hero */
 	#hero h1 {
-		font-size: 7rem;
+		font-size: 5rem;
 	}
 
 	/* Skills Section */
 	#skills .skill-bottom .skill-item {
-		flex-basis: 45%;
+		flex-basis: 40%;
 		margin: 2.5%;
 	}
 
@@ -641,15 +666,16 @@ p {
 	}
 	#projects .project-item {
 		height: 400px;
-		margin: 0;
-		width: 90vh
-		border-radius: 0;
+		margin: 0, 20px;
+		width: 80vw;
+		border-radius: 10px;
 	}
 	#projects .all-projects .project-info {
 		height: 100%;
 	}
 	#projects .all-projects .project-img {
 		height: 100%;
+		width: 50%;
 	}
 
 	/* About */
@@ -662,10 +688,10 @@ p {
 		padding-left: 60px;
 	}
 	#about .about .col-left .about-img::after {
-		left: 10px;
-		top: 4px;
-		height: 98%;
-		width: 98%;
+		left: -2px;
+		top: -2px;
+		height: 100%;
+		width: 100%;
 		border: 2px solid #8E54E9;
 	}
 	#about .col-right {
@@ -707,6 +733,9 @@ p {
 		width: 100%;
 		text-align: left;
 		padding-left: 20px;
+	}
+	.branding h1 {
+		font-size: 4rem;
 	}
 }
 
